plugins {
    id 'checkstyle'
    id "com.github.spotbugs" version '6.0.8'
}

allprojects {
    version = '1.0.0'
    repositories  {
        maven {
            url "https://jitpack.io"
        }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'checkstyle'
    apply plugin: 'com.github.spotbugs'
    java {
        repositories {
            mavenCentral()
        }
        sourceCompatibility = JavaVersion.VERSION_20
        targetCompatibility = JavaVersion.VERSION_20
        jar {
            archiveBaseName.set('data-validator')
        }
        dependencies {
            testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.3'
            testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.2'
            testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.2'
            testImplementation group: 'com.tngtech.archunit', name: 'archunit', version: '1.2.1'
            testImplementation group: 'com.tngtech.archunit', name: 'archunit-junit5-api', version: '1.2.1'
            testImplementation group: 'com.tngtech.archunit', name: 'archunit-junit5-engine', version: '1.2.1'
        }
        test {
            useJUnitPlatform()
        }
        spotbugs {
            excludeFilter.set(file("${project.rootDir}/config/spotbugs/spotbugs-exclude.xml"))
        }
        spotbugsMain {
            reports {
                html {
                    enabled = true
                    destination = file("$buildDir/reports/spotbugs/main.html")
                    stylesheet = 'fancy-hist.xsl'
                }
            }
        }
        spotbugsTest {
            reports {
                html {
                    enabled = true
                    destination = file("$buildDir/reports/spotbugs/test.html")
                    stylesheet = 'fancy-hist.xsl'
                }
            }
        }
    }
}
